# go-backend/internal/delivery/http/router.go
@@ -2,25 +2,37 @@ package delivery
 
 import (
 	"net/http"
+
 	_ "github.com/katrinani/pivchiki-bot/backend/docs"
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-func NewProfileRouter(handler *ProfileHandler) http.Handler {
+func ProfileRouter(handler *ProfileHandler) http.Handler {
 	mux := http.NewServeMux()
 
 	mux.HandleFunc("GET /", handler.GetProfile)
 	mux.HandleFunc("PATCH /", handler.UpdateProfile)
+	mux.HandleFunc("POST /", handler.CreateProfile)
 
 	return mux
 }
 
-func NewAppRouter(profileHandler *ProfileHandler) http.Handler {
+func AuthRouter(handler *AuthHandler) http.Handler {
+	mux := http.NewServeMux()
+
+	mux.HandleFunc("POST /login", handler.Login)
+	mux.HandleFunc("POST /registry", handler.Registry)
+
+	return mux
+}
+
+func NewAppRouter(profileHandler *ProfileHandler, authHandler *AuthHandler) http.Handler {
 	mux := http.NewServeMux()
 
 	mux.Handle("/swagger/", httpSwagger.WrapHandler)
 
-	mux.Handle("/api/v1/profile", AuthMiddleWare(NewProfileRouter(profileHandler)))
+	mux.Handle("/api/v1/profile", AuthMiddleWare(ProfileRouter(profileHandler)))
+	mux.Handle("/api/v1/auth/", http.StripPrefix("/api/v1/auth", AuthRouter(authHandler)))
 
 	return mux
 }
